2009-11-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added markTotalLengthIsKnown().
	* src/DownloadContext.h

2009-11-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't add PeerChokeCommand and SeedCheckCommand if metadata is
	missing. If metadata is missing, always use DHT when it is ready.
	* src/BtSetup.cc

2009-11-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added parseMagnetLink(). Hex encoded info hash is supported.
	Base32 encoded info hash is not supported yet.
	* src/bittorrent_helper.cc
	* src/bittorrent_helper.h
	* test/BittorrentHelperTest.cc

2009-11-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added FromHex()
	* src/util.cc
	* src/util.h
	* test/UtilTest.cc

2009-11-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added _metadataGetMode member variable. It toggles the action when
	messages are received: usually they almost do nothing if
	_metadataGetMode is true.
	* src/AbstractBtMessage.cc
	* src/AbstractBtMessage.h
	* src/BtAllowedFastMessage.cc
	* src/BtBitfieldMessage.cc
	* src/BtCancelMessage.cc
	* src/BtChokeMessage.cc
	* src/BtHaveAllMessage.cc
	* src/BtHaveMessage.cc
	* src/BtInterestedMessage.cc
	* src/BtNotInterestedMessage.cc
	* src/BtPieceMessage.cc
	* src/BtRejectMessage.cc
	* src/BtRequestMessage.cc
	* src/BtUnchokeMessage.cc

2009-11-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added bencode::decode overload functions. They have extra argument
	'end', passed by reference. 'end' points to the beyond the last
	position of data used in decoding process.
	* src/bencode.cc
	* src/bencode.h
	* test/BencodeTest.cc

2009-11-21  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Initial support of Extension for Peers to Send Metadata
	Files(BEP9). Currently aria2 only serves metadata and cannot get
	metadata from swarm.
	* src/BtConstants.h
	* src/DefaultBtInteractive.cc
	* src/DefaultExtensionMessageFactory.cc